@@ -444,6 +444,8 @@
                 - The UUIDs of the instances of the models '*Status', 'PaymentTerms', 'SettlementTerms' & 'AdditionalInformation'
                   created by the 'populate' script are now fixed (to be consistent between Creme instances).
                   A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
+                - The default value for the field 'models.Line.vat_value' is now dynamic & use the 'Vat' instance with <is_default=True> ;
+                  so it will break your code which relied on an implicit "0.0" value (mainly your unit tests).
             * Opportunities :
                 - The UUIDs of the instances of the models 'SalesPhase' & 'Origin' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                   A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
